--- a/sample-sigplan.tex
+++ b/sample-sigplan.tex
@@ -139,8 +139,11 @@ ACM SIG Proceedings.
   \label{fig:teaser}
 \end{teaserfigure}
 
+\captionruleoff % Switching off the rule for teaser
 
 \maketitle
+
+\captionruleon % Switching on the rule for other figures and tables
 
 \input{samplebody-conf}
 
