--- a/samplebody-conf.tex
+++ b/samplebody-conf.tex
@@ -168,6 +168,7 @@ in the printed output of this document.
 
 \begin{table*}
   \centering
+  \nocaptionrule % SIGPLAN only; does not do anything in other formats
   \caption{Some Typical Commands}
   \label{tab:commands}
   \begin{tabular}{ccl}
@@ -228,6 +229,7 @@ with \textbf{figure*}, not \textbf{figure}!
 \begin{figure*}
 \centering
 \includegraphics{flies}
+\nocaptionrule % SIGPLAN only; does not do anything in other formats
 \caption{A sample black and white graphic
 that needs to span two columns of text.}
 \end{figure*}
