Documentation typo corrected

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -876,8 +876,8 @@
 % \cs{nocaptionrule} before the caption (but inside figure or table)
 % switches the rule off.  The command \cs{captionruleoff} switches off
 % caption rules for all subsequent figures, while the command
-% \cs{captionruleon} switches them on.  In other formats this command
-% does not make any difference.
+% \cs{captionruleon} switches them on.  In other formats these commands
+% do not make any difference.
 %
 %\subsection{Theorems}
 %\label{sec:ug_theorems}
