Leave acmplain as the active theorem style
Seems appropriate to leave the active theorem style as that which
corresponds to the created theorem environment.

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -4122,6 +4122,7 @@ Computing Machinery]
 \theoremstyle{acmdefinition}
 \newtheorem{example}[theorem]{Example}
 \newtheorem{definition}[theorem]{Definition}
+\theoremstyle{acmplain}
 %    \end{macrocode}
 %
 %
