Inc version: ACM thm styles and proof env customizations

--- a/README
+++ b/README
@@ -6,3 +6,6 @@ Changes
 version 1.08    SIGPLAN reformatting (Matthew Fluet); bug fixes
 
 version 1.09    SIGPLAN: revert caption rules (Matthew Fluet)
+
+version 1.11    Customization of ACM theorem styles and proof
+                environment (Matthew Fluet).
