--- a/acmart.dtx
+++ b/acmart.dtx
@@ -997,7 +997,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2016/05/23 v1.10 Typesetting articles for Association of
+[2016/05/23 v1.11 Typesetting articles for Association of
 Computing Machinery]
 %    \end{macrocode}
 %
@@ -1022,6 +1022,8 @@ Computing Machinery]
 % \changes{v1.08}{2016/05/13}{SIGPLAN reformatting by Matthew Fluet}
 % \changes{v1.08}{2016/05/13}{Typos corrected (Tobias Pape)}
 % \changes{v1.09}{2016/05/18}{Revert SIGPLAN caption rules}
+% \changes{v1.11}{2016/05/27}{Customization of ACM theorem styles and
+% proof environment by Matthew Fluet}
 %
 %
 % And the driver code:
