--- a/acmart.dtx
+++ b/acmart.dtx
@@ -994,7 +994,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2016/05/23 v1.11 Typesetting articles for Association of
+[2016/05/30 v1.12 Typesetting articles for Association of
 Computing Machinery]
 %    \end{macrocode}
 %
@@ -3974,6 +3974,85 @@ Computing Machinery]
 %\label{sec:sectioninng}
 %
 %
+%
+% \begin{macro}{\@secfont}
+% \begin{macro}{\@subsecfont}
+% \begin{macro}{\@subsubsecfont}
+% \begin{macro}{\@parfont}
+%   \changes{v1.12}{2016/05/30}{Moved to \cs{section@raggedright}}%
+% Fonts for sections etc. are different for different formats. 
+%    \begin{macrocode}
+\def\@secfont{\sffamily\bfseries\section@raggedright\MakeUppercase}
+\def\@subsecfont{\sffamily\bfseries\section@raggedright}
+\def\@subsubsecfont{\sffamily\itshape}
+\def\@parfont{\itshape}
+\setcounter{secnumdepth}{3}
+\ifcase\ACM@format@nr
+\relax % manuscript
+\or % acmsmall
+\or % acmlarge
+ \def\@secfont{\sffamily\large\section@raggedright\MakeUppercase}
+ \def\@subsecfont{\sffamily\large\section@raggedright}
+\or % acmtog
+ \def\@secfont{\sffamily\large\section@raggedright\MakeUppercase}
+ \def\@subsecfont{\sffamily\large\section@raggedright}
+\or % sigconf
+ \def\@secfont{\bfseries\Large\section@raggedright\MakeUppercase}
+ \def\@subsecfont{\bfseries\Large\section@raggedright}
+\or % siggraph
+ \def\@secfont{\bfseries\sffamily\Large\section@raggedright\MakeUppercase}
+ \def\@subsecfont{\bfseries\sffamily\Large\section@raggedright}
+\or % sigplan
+ \def\@secfont{\bfseries\Large\section@raggedright}
+ \def\@subsecfont{\bfseries\section@raggedright}
+ \renewcommand\subsubsection{\@startsection{subsubsection}{3}{\z@}%
+   {-.75\baselineskip \@plus -2\p@ \@minus -.2\p@}%
+   {.25\baselineskip}%
+   {\@subsubsecfont}}
+ \def\@subsubsecfont{\bfseries\section@raggedright}
+ \renewcommand\paragraph{\@startsection{paragraph}{4}{\z@}%
+   {-.5\baselineskip \@plus -2\p@ \@minus -.2\p@}%
+   {-3.5\p@}%
+   {\@parfont\@addspaceafter}}
+ \def\@parfont{\bfseries\itshape}
+ \renewcommand\subparagraph{\@startsection{subparagraph}{5}{\z@}%
+   {-.5\baselineskip \@plus -2\p@ \@minus -.2\p@}%
+   {-3.5\p@}%
+   {\@subparfont\@addspaceafter}}
+ \def\@subparfont{\itshape}
+\or % sigchi
+ \setcounter{secnumdepth}{1}
+ \def\@secfont{\bfseries\sffamily\section@raggedright\MakeUppercase}
+ \def\@subsecfont{\bfseries\sffamily\section@raggedright}
+\or % sigchi-a
+ \setcounter{secnumdepth}{0}
+ \def\@secfont{\bfseries\sffamily\section@raggedright\MakeUppercase}
+ \def\@subsecfont{\bfseries\sffamily\section@raggedright}
+\fi
+%    \end{macrocode}
+%
+% \end{macro}
+% \end{macro} 
+% \end{macro}
+% \end{macro}
+% 
+% \begin{macro}{\@adddotafter}
+%   Add punctuation after the command
+%    \begin{macrocode}
+\def\@adddotafter#1{#1\@addpunct{.}}
+%    \end{macrocode}
+%
+% \end{macro}
+%
+% \begin{macro}{\@addspaceafter}
+%   Add space after the command
+%    \begin{macrocode}
+\def\@addspaceafter#1{#1\@addpunct{\enspace}}
+%    \end{macrocode}
+%
+% \end{macro}
+%
+%
 %   Sectioning is different for different levels
 %    \begin{macrocode}
 \renewcommand\section{\@startsection{section}{1}{\z@}%
@@ -3998,76 +4077,18 @@ Computing Machinery]
   {\@parfont}}
 %    \end{macrocode}
 %
-%
-% Fonts for sections etc. are different for different formats.  Also,
-% some formats use the ugly period after section number (sigh):
+% \begin{macro}{\section@raggedright}
+%   \changes{v1.12}{2016/05/30}{Introduced macro}%
+%   Special version of \cs{raggedright} compatible with
+%   \cs{MakeUppercase}
 %    \begin{macrocode}
-\def\@secfont{\sffamily\bfseries\raggedright\MakeUppercase}
-\def\@subsecfont{\sffamily\bfseries\raggedright}
-\def\@subsubsecfont{\sffamily\itshape}
-\def\@parfont{\itshape}
-\setcounter{secnumdepth}{3}
-\ifcase\ACM@format@nr
-\relax % manuscript
-\or % acmsmall
-\or % acmlarge
- \def\@secfont{\sffamily\large\raggedright\MakeUppercase}
- \def\@subsecfont{\sffamily\large\raggedright}
-\or % acmtog
- \def\@secfont{\sffamily\large\raggedright\MakeUppercase}
- \def\@subsecfont{\sffamily\large\raggedright}
-\or % sigconf
- \def\@secfont{\bfseries\Large\raggedright\MakeUppercase}
- \def\@subsecfont{\bfseries\Large\raggedright}
-\or % siggraph
- \def\@secfont{\bfseries\sffamily\Large\raggedright\MakeUppercase}
- \def\@subsecfont{\bfseries\sffamily\Large\raggedright}
-\or % sigplan
- \def\@secfont{\bfseries\Large\raggedright}
- \def\@subsecfont{\bfseries\raggedright}
- \renewcommand\subsubsection{\@startsection{subsubsection}{3}{\z@}%
-   {-.75\baselineskip \@plus -2\p@ \@minus -.2\p@}%
-   {.25\baselineskip}%
-   {\@subsubsecfont}}
- \def\@subsubsecfont{\bfseries\raggedright}
- \renewcommand\paragraph{\@startsection{paragraph}{4}{\z@}%
-   {-.5\baselineskip \@plus -2\p@ \@minus -.2\p@}%
-   {-3.5\p@}%
-   {\@parfont\@addspaceafter}}
- \def\@parfont{\bfseries\itshape}
- \renewcommand\subparagraph{\@startsection{subparagraph}{5}{\z@}%
-   {-.5\baselineskip \@plus -2\p@ \@minus -.2\p@}%
-   {-3.5\p@}%
-   {\@subparfont\@addspaceafter}}
- \def\@subparfont{\itshape}
-\or % sigchi
- \setcounter{secnumdepth}{1}
- \def\@secfont{\bfseries\sffamily\raggedright\MakeUppercase}
- \def\@subsecfont{\bfseries\sffamily\raggedright}
-\or % sigchi-a
- \setcounter{secnumdepth}{0}
- \def\@secfont{\bfseries\sffamily\raggedright\MakeUppercase}
- \def\@subsecfont{\bfseries\sffamily\raggedright}
-\fi
+\def\section@raggedright{\@rightskip\@flushglue 
+  \rightskip\@rightskip
+  \leftskip\z@skip
+  \parindent\z@}
 %    \end{macrocode}
-%
-% \begin{macro}{\@adddotafter}
-%   Add punctuation after the command
-%    \begin{macrocode}
-\def\@adddotafter#1{#1\@addpunct{.}}
-%    \end{macrocode}
-%
+%   
 % \end{macro}
-%
-% \begin{macro}{\@addspaceafter}
-%   Add space after the command
-%    \begin{macrocode}
-\def\@addspaceafter#1{#1\@addpunct{\enspace}}
-%    \end{macrocode}
-%
-% \end{macro}
-%
-%
 %
 %
 %\subsection{Theorems}
