Moved textcomp to the `obsolete` branch

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1752,8 +1752,9 @@ Computing Machinery]
 \RequirePackage[tt=false]{libertine}
 \RequirePackage[varqu]{zi4}
 \RequirePackage[libertine]{newtxmath}
-\fi
+\else
 \RequirePackage{textcomp}
+\fi
 %    \end{macrocode}
 %
 % The SIGCHI extended abstracts are sans serif:
