--- a/acmart.dtx
+++ b/acmart.dtx
@@ -132,6 +132,7 @@
 % \item \textsl{amscls}, \url{http://www.ctan.org/pkg/amscls}
 % \item \textsl{amsfonts}, \url{http://www.ctan.org/pkg/amsfonts}
 % \item \textsl{amsmath}, \url{http://www.ctan.org/pkg/amsmath}
+% \item \textsl{binhex}, \url{http://www.ctan.org/pkg/binhex}
 % \item \textsl{caption}, \url{http://www.ctan.org/pkg/caption}
 % \item \textsl{comment}, \url{http://www.ctan.org/pkg/comment}
 % \item \textsl{environ}, \url{http://www.ctan.org/pkg/environ}
@@ -144,11 +145,10 @@
 % \item \textsl{ifluatex}, \url{http://www.ctan.org/pkg/ifluatex}
 % \item \textsl{ifxetex}, \url{http://www.ctan.org/pkg/ifxetex}
 % \item \textsl{inconsolata}, \url{http://www.ctan.org/pkg/inconsolata}
-% \item \textsl{kastrup}, \url{http://www.ctan.org/pkg/kastrup}
+% \item \textsl{latex-tools}, \url{http://www.ctan.org/pkg/latex-tools}
 % \item \textsl{libertine}, \url{http://www.ctan.org/pkg/libertine}
 % \item \textsl{manyfoot}, \url{http://www.ctan.org/pkg/manyfoot}
 % \item \textsl{microtype}, \url{http://www.ctan.org/pkg/microtype}
-% \item \textsl{mptopdf}, \url{http://www.ctan.org/pkg/mptopdf}
 % \item \textsl{ms}, \url{http://www.ctan.org/pkg/ms}
 % \item \textsl{mweights}, \url{http://www.ctan.org/pkg/mweights}
 % \item \textsl{natbib}, \url{http://www.ctan.org/pkg/natbib}
@@ -157,7 +157,6 @@
 % \item \textsl{oberdiek}, \url{http://www.ctan.org/pkg/oberdiek}
 % \item \textsl{pdftex-def}, \url{http://www.ctan.org/pkg/pdftex-def}
 % \item \textsl{setspace}, \url{http://www.ctan.org/pkg/setspace}
-% \item \textsl{tools}, \url{http://www.ctan.org/pkg/tools}
 % \item \textsl{totpages}, \url{http://www.ctan.org/pkg/totpages}
 % \item \textsl{trimspaces}, \url{http://www.ctan.org/pkg/trimspaces}
 % \item \textsl{upquote}, \url{http://www.ctan.org/pkg/upquote}
