Added sloppypar advice

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -994,8 +994,9 @@
 % help if you absolutely need to.
 %
 % Another problem might be the too strict line breaking rules.  Again,
-% a strategically placed \cs{sloppy} command might help---but beware
-% the results might be, well, sloppy.
+% a strategically placed \cs{sloppy} command or putting the
+% problematic paragraph inside \texttt{sloppypar} environment might
+% help---but beware the results might be, well, sloppy.
 %
 %
 %
