--- a/sample-acmsmall.tex
+++ b/sample-acmsmall.tex
@@ -1,4 +1,4 @@
-\documentclass[format=acmsmall,natbib=true, review=false, screen=true]{acmart}
+\documentclass[format=acmsmall, review=false, screen=true]{acmart}
 
 \usepackage{booktabs} % For formal tables
 
