--- a/sample-acmtog.tex
+++ b/sample-acmtog.tex
@@ -1,4 +1,4 @@
-\documentclass[acmtog, natbib, authorversion]{acmart}
+\documentclass[acmtog, authorversion]{acmart}
 
 \usepackage{booktabs} % For formal tables
 
