--- a/sample-manuscript.tex
+++ b/sample-manuscript.tex
@@ -1,5 +1,5 @@
 \listfiles
-\documentclass[manuscript, review, screen, natbib]{acmart}
+\documentclass[manuscript, review, screen]{acmart}
 \setcitestyle{super,sort&compress}
 \usepackage{booktabs} % For formal tables
 
