--- a/sample-siggraph.tex
+++ b/sample-siggraph.tex
@@ -1,4 +1,4 @@
-\documentclass[siggraph, natbib=false, review=false]{acmart}
+\documentclass[siggraph, review=false]{acmart}
 
 \usepackage{booktabs} % For formal tables
 
