--- a/sample-sigplan.tex
+++ b/sample-sigplan.tex
@@ -1,4 +1,4 @@
-\documentclass[sigplan, natbib=true, anonymous, review]{acmart}
+\documentclass[sigplan, anonymous, review]{acmart}
 
 \usepackage{booktabs} % For formal tables
 
