--- a/README
+++ b/README
@@ -7,6 +7,8 @@ version 1.08    SIGPLAN reformatting (Matthew Fluet); bug fixes
 
 version 1.09    SIGPLAN: revert caption rules (Matthew Fluet)
 
+version 1.10    Bug fixes
+
 version 1.11    Customization of ACM theorem styles and proof
                 environment (Matthew Fluet).
 
