--- a/sample-siggraph.tex
+++ b/sample-siggraph.tex
@@ -84,6 +84,9 @@
 \affiliation{The Kumquat Consortium} 
 \email{jpkumquat@consortium.net}
 
+% The default list of authors is too long for headers}
+\renewcommand{\shortauthors}{B. Trovato et. al.}
+
 \begin{abstract}
 This paper provides a sample of a \LaTeX\ document which conforms,
 somewhat loosely, to the formatting guidelines for
