--- a/samplebody-journals.tex
+++ b/samplebody-journals.tex
@@ -260,7 +260,7 @@ also give its 90\% confidence interval.
   \bottomrule
 \end{tabular}
 \end{center}
-\bigskip
+\bigskip\centering
 \footnotesize\emph{Source:} This is a table
  sourcenote. This is a table sourcenote. This is a table
  sourcenote.
@@ -320,7 +320,7 @@ denoted as $N_{1}$. In contrast, we also measure the same value of the
 test mote without switching channels, denoted as $N_{2}$. We calculate
 the channel-switching time $s$ as
 \begin{displaymath}%
-s=\frac{10}{N_{1}}-\frac{10}{N_{2}}/
+s=\frac{10}{N_{1}}-\frac{10}{N_{2}}.
 \end{displaymath}%
 By repeating the experiments 100 times, we get the average
 channel-switching time of Micaz motes: 24.3\,$\mu$s.
