--- a/README
+++ b/README
@@ -18,3 +18,4 @@ version 1.12    Bug fixes and documentation updates.
 		makes a guess based on the format chosen.
 
 version 1.13    Formatting changes: headers, folios etc.
+		Bibliography changes.
