--- a/sample-sigplan.tex
+++ b/sample-sigplan.tex
@@ -1,6 +1,7 @@
 \documentclass[sigplan, anonymous, review]{acmart}
 
 \usepackage{booktabs} % For formal tables
+%\citestyle{acmnumeric} % For numeric citations
 
 
 % Copyright
