--- a/sample-acmlarge.tex
+++ b/sample-acmlarge.tex
@@ -145,6 +145,9 @@ multi-channel, radio interference, time synchronization}
 
 \maketitle
 
+% The default list of authors is too long for headers}
+\renewcommand{\shortauthors}{G. Zhou et. al.}
+
 \input{samplebody-journals}
 
 
