--- a/sample-sigchi-a.tex
+++ b/sample-sigchi-a.tex
@@ -67,7 +67,7 @@
 \email{author7@umbhaliu.ac.za} 
 
 % The default list of authors is too long for headers}
-\renewcommand{\shortauthors}{B. Trovato et. al.}
+\renewcommand{\shortauthors}{F. Author et. al.}
 
 
 %
